# GroupFaceRecognition

./: .gitignore  README.md  SchoolPhotoIdentifier.ipynb  build.bat  build.sh  build_macos.sh  main.spec  pyproject.toml  requirements.txt  schoolphotoID.spec  setup.py
.github/workflows/: build.yml
models/: extract_model.py
schoolphotoID/: __init__.py  __main__.py  main.py
schoolphotoID/core/: __init__.py  annotator.py  face_loader.py  file_util.py  recognizer.py  sorter.py
schoolphotoID/gui/: __init__.py  main_window.py  worker.py
src/: __init__.py  face_recognition_tool.py  setup_face_recognition.py  tools.py  vision_client.py
src/face_recognition_models/: __init__.py
